# Modulo-68

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py  urls.py
products/: apps.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
