[tool.poetry]
name = "modulo-68"
version = "0.1.0"
description = ""
authors = ["Kaio Grativol <kaio@exemplo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
django = "*"
djangorestframework = "*"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
